	* Added support for uT peer exchange extension, implemented by Massaroddel.
	* Modified the quota management to offer better bandwidth balancing
	  between peers.
	* added XCode project files (maintained by Gregor Riepl)
	* logging now supports multiple sessions (different sessions now log
	  to different directories).
	* fixed random number generator seed problem, generating the same
	  peer-id for sessions constructed the same second.
	* added an option to accept multiple connections from the same IP.
	* improved tracker logging.
	* moved the file_pool into session. The number of open files is now
	  limited per session.
	* fixed uninitialized private flag in torrent_info
	* fixed long standing issue with file.cpp on windows. Replaced the low level
	  io functions used on windows.
	* made it possible to associate a name with torrents without metadata.
	* improved http-downloading performance by requesting entire pieces via
	  http.
	* added plugin interface for extensions. And changed the interface for
	  enabling extensions.

release 0.11

	* added support for incorrectly encoded paths in torrent files
	  (assumes Latin-1 encoding and converts to UTF-8).
	* added support for destructing session objects asynchronously.
	* fixed bug with file_progress() with files = 0 bytes
	* fixed a race condition bug in udp_tracker_connection that could
	  cause a crash.
	* fixed bug occuring when increasing the sequenced download threshold
	  with max availability lower than previous threshold.
	* fixed an integer overflow bug occuring when built with gcc 4.1.x
	* fixed crasing bug when closing while checking a torrent
	* fixed bug causing a crash with a torrent with piece length 0
	* added an extension to the DHT network protocol to support the
	  exchange of nodes with IPv6 addresses.
	* modified the ip_filter api slightly to support IPv6
	* modified the api slightly to make sequenced download threshold
	  a per torrent-setting.
	* changed the address type to support IPv6