@@ -1,3 +1,5 @@
+	* Implemented an optmization which frees the piece_picker once a torrent
+	  turns into a seed.
 	* Added support for uT peer exchange extension, implemented by Massaroddel.
 	* Modified the quota management to offer better bandwidth balancing
 	  between peers.
